--- a/APP/ContactApp/ContactApp/Pages/ContactList.xaml
+++ b/APP/ContactApp/ContactApp/Pages/ContactList.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ContactApp"
-             x:Class="ContactApp.ContactList">
+             x:Class="ContactApp.Pages.ContactList"
+             Title="Liste des contacts">
     
     <StackLayout Orientation="Vertical" x:Name="ContactListLayout">
     <!--
