--- a/APP/ContactApp/ContactApp/Pages/ContactDetail.xaml
+++ b/APP/ContactApp/ContactApp/Pages/ContactDetail.xaml
@@ -2,10 +2,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ContactApp.Pages.ContactDetail"
+             x:Name="ContactDetail"
              Title="Détail du contact">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Détail du contact" />
+        <StackLayout Orientation="Vertical">
+            <Label Text="Prénom" />
+            <Entry BindingContext="{x:Reference Name=ContactDetail}" Text="{Binding contact.FirstName}" />
+            <Label Text="Nom" />
+            <Entry BindingContext="{x:Reference Name=ContactDetail}" Text="{Binding contact.LastName}" />
+            <Label Text="Numéro" />
+            <Entry BindingContext="{x:Reference Name=ContactDetail}" Text="{Binding contact.PhoneNumber}" />
+            <Label Text="E-mail" />
+            <Entry BindingContext="{x:Reference Name=ContactDetail}" Text="{Binding contact.Mail}" />
+            <Label Text="Adresse" />
+            <Entry BindingContext="{x:Reference Name=ContactDetail}" Text="{Binding contact.Address}" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
