call phone and open sms

--- a/APP/ContactApp/ContactApp/Pages/ContactList.xaml
+++ b/APP/ContactApp/ContactApp/Pages/ContactList.xaml
@@ -13,8 +13,8 @@
                         <StackLayout.GestureRecognizers>
                             <PanGestureRecognizer PanUpdated="OnPanUpdated" />
                         </StackLayout.GestureRecognizers>
-                        <Button Text="SMS" HorizontalOptions="Fill" Clicked="Button_Clicked"></Button>
-                        <Button Text="TEL" HorizontalOptions="Fill" Clicked="Button_Clicked"></Button>
+                        <Button Text="SMS" HorizontalOptions="Fill" Clicked="SMSClicked" CommandParameter="{Binding PhoneNumber}"></Button>
+                        <Button Text="TEL" HorizontalOptions="Fill" Clicked="TelClicked" CommandParameter="{Binding PhoneNumber}"></Button>
                         <StackLayout Orientation="Vertical" HorizontalOptions="Fill">
                             <StackLayout Orientation="Horizontal">
                                 <Label Text="{Binding FirstName}"></Label>
