enregistrement d'un contact (ajout/edition) + msg confirmation lors du delete

--- a/APP/ContactApp/ContactApp/Pages/ContactDetail.xaml
+++ b/APP/ContactApp/ContactApp/Pages/ContactDetail.xaml
@@ -16,6 +16,8 @@
             <Entry BindingContext="{x:Reference Name=ContactDetail}" Text="{Binding contact.Mail}" />
             <Label Text="Adresse" />
             <Entry BindingContext="{x:Reference Name=ContactDetail}" Text="{Binding contact.Address}" />
+
+            <Button Text="Enregistrer" Clicked="BtnEnregistrer"></Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
