--- a/APP/ContactApp/ContactApp/Pages/ContactDetail.xaml
+++ b/APP/ContactApp/ContactApp/Pages/ContactDetail.xaml
@@ -5,25 +5,27 @@
              x:Name="ContactDetail"
              Title="Détail du contact">
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical">
-            <Image x:Name="ContactPhoto" Source="{Binding photo}" HeightRequest="100">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="ContactPhotoTapped"></TapGestureRecognizer>
-                </Image.GestureRecognizers>
-            </Image>
+        <ScrollView>
+            <StackLayout Orientation="Vertical">
+                <Image x:Name="ContactPhoto" Source="{Binding photo}" HeightRequest="100">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="ContactPhotoTapped"></TapGestureRecognizer>
+                    </Image.GestureRecognizers>
+                </Image>
 
-            <Label Text="Prénom" />
-            <Entry Text="{Binding contact.FirstName}" />
-            <Label Text="Nom" />
-            <Entry Text="{Binding contact.LastName}" />
-            <Label Text="Numéro" />
-            <Entry Text="{Binding contact.PhoneNumber}" />
-            <Label Text="E-mail" />
-            <Entry Text="{Binding contact.Mail}" />
-            <Label Text="Adresse" />
-            <Entry Text="{Binding contact.Address}" />
+                <Label Text="Prénom" />
+                <Entry Text="{Binding contact.FirstName}" />
+                <Label Text="Nom" />
+                <Entry Text="{Binding contact.LastName}" />
+                <Label Text="Numéro" />
+                <Entry Text="{Binding contact.PhoneNumber}" />
+                <Label Text="E-mail" />
+                <Entry Text="{Binding contact.Mail}" />
+                <Label Text="Adresse" />
+                <Entry Text="{Binding contact.Address}" />
 
-            <Button Text="Enregistrer" Clicked="BtnEnregistrer"></Button>
-        </StackLayout>
+                <Button Text="Enregistrer" Clicked="BtnEnregistrer"></Button>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
